--- a/assets/sass/components/services/_servicePaginate.scss
+++ b/assets/sass/components/services/_servicePaginate.scss
@@ -15,7 +15,9 @@
     align-items: center;
     column-gap: 10px;
     justify-content: center;
+    flex-wrap: wrap;
     li {
+        margin: 10px 0;
         a {
             height: 40px;
             width: 40px;
