--- a/assets/sass/pages/community/_settings.scss
+++ b/assets/sass/pages/community/_settings.scss
@@ -659,3 +659,154 @@
         margin-bottom: 0;
     }
 }
+
+
+
+// login page start 
+.community-login-area {
+    background: $theme-font;
+    padding: 150px 0;
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    .home-icon {
+        height: 50px;
+        width: 50px;
+        background: $white;
+        color: $theme-font;
+        border-radius: 50%;
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 25px;
+        transition: all .3s ease;
+        border: 1px solid $white;
+        &:hover{
+            color: $white;
+            background: $theme-color;
+            border: 1px solid $white;
+        }
+    }
+    .community-login {
+        position: relative;
+        z-index: 1;
+        background: $white;
+        padding: 50px;
+        max-width: 600px;
+        border-radius: 12px;
+        width: 100%;
+        // box-shadow: 3px 3px 5px 6px #ccc;
+        @media (max-width: 576px) {
+            padding: 30px;
+        }
+        .login-logo {
+            text-align: center;
+            margin-bottom: 25px;
+        }
+        .community-loginForm {
+            .login-title {
+                font-size: 22px;
+                font-weight: 600;
+                margin-bottom: 25px;
+            }
+            .login-box {
+                margin-bottom: 25px;
+                position: relative;
+                input {
+                    height: 50px;
+                    padding: 0 20px;
+                    width: 100%;
+                    border: 1px solid #6b7c8f;
+                    border-radius: 8px;
+                    color: $theme-font;
+                    outline: none;
+                }
+                label {
+                    font-size: 14px;
+                    color: $theme-font;
+                    font-weight: 600;
+                    position: absolute;
+                    top: 50%;
+                    left: 20px;
+                    transform: translateY(-50%);
+                    pointer-events: none;
+                    transition: all .3s ease;
+                }                
+                input:focus~label,
+                &:valid~label{
+                    top: -1px;
+                    left: 10px;
+                    font-size: 12px;
+                    color: #6b7c8f;
+                    padding: 5px 0;
+                    background: $white;
+                }
+            }
+            .remember-box {
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 30px;
+                @media (max-width:425px) {
+                    flex-direction: column;
+                    row-gap: 10px;
+                    justify-content: center;
+                    text-align: center;
+                }
+                span {
+                    display: flex;
+                    align-items: center;
+                    column-gap: 8px;
+                    @media (max-width:425px) {
+                        justify-content: center;
+                        text-align: center;
+                    }
+                    input {
+                        height: 15px;
+                        width: 15px;
+                    }
+                    label {
+                        font-size: 15px;
+                        color: $theme-font;
+                    }
+                }
+                .forgot-pass {
+                    font-size: 15px;
+                    color: $theme-font;
+                    text-decoration: underline;
+                }
+            }
+            .login-btn-list {
+                display: flex;
+                flex-direction: column;
+                row-gap: 20px;
+                @media (max-width:425px) {
+                    row-gap: 10px;
+                }
+                p {
+                    text-align: center;
+                    font-size: 18px;
+                    color: $theme-font;
+                    font-weight: 600;
+                }
+                button {
+                    width: 100%;                    
+                }
+                .googl-btn {
+                    background: $theme-font;
+                    color: $white;
+                    border: 1px solid $theme-font;
+                }
+            }
+        }
+    }
+}
+// login page end 
