--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -22,6 +22,8 @@
 @import "layout/ecommarce_header-joy";
 @import "layout/hero-slider";
 @import "layout/footer";
+@import "layout/main-header";
+@import "layout/main_footer";
 
 
 // for community
@@ -45,6 +47,16 @@
 @import "pages/_ecommarce/wishlist";
 @import "pages/_ecommarce/checkout";
 
+// gallery page
+@import "pages/_gallery/header";
+@import "pages/_gallery/home";
+@import "pages/_gallery/photo_page";
+@import "pages/_gallery/video_page";
+@import "pages/_gallery/video_single_page";
+@import "pages/_gallery/profile";
+@import "pages/_gallery/add_file";
+@import "pages/_gallery/album_category";
+@import "pages/_gallery/album_photo";
 
 
 
