--- a/assets/sass/layout/services/_serviceHeader.scss
+++ b/assets/sass/layout/services/_serviceHeader.scss
@@ -22,6 +22,7 @@
 }
 .service-responsive-menu {
     display: flex;
+    z-index: 11;
     li {
         font-size: 16px;
         color: $theme-font;
