some update on gallery page

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -67,6 +67,8 @@
 @import "pages/_gallery/add_file";
 @import "pages/_gallery/album_category";
 @import "pages/_gallery/album_photo";
+@import "pages/_gallery/gallery_dashboard";
+@import "pages/_gallery/dashboard_personal_profile";
 
 
 
