--- a/assets/sass/pages/_gallery/_header.scss
+++ b/assets/sass/pages/_gallery/_header.scss
@@ -4,7 +4,8 @@ padding: 25px 0;
 .gallery-header-content{
 display: flex;
 align-items: center;
-column-gap: 30px;
+// column-gap: 30px;
+justify-content: space-between;
 }
 .gallery-header-search-input{
     position: relative;
