--- a/assets/sass/pages/services/_serviceHome.scss
+++ b/assets/sass/pages/services/_serviceHome.scss
@@ -368,9 +368,6 @@
                     border-radius: 50%;
                     width: 100%;
                 }
-                i {
-                    // color: #F6F6F6;
-                }
             }
         }
         .content-text {
@@ -1026,8 +1023,7 @@
     }
     .service-contact-map {
         flex-basis: 50%;
-        iframe {
-            width: 100%;
+        #serviceMap {
             height: 100%;
             border-radius: 10px;
         }
@@ -1083,8 +1079,10 @@
         .video-tumbnil {
             position: relative;
             display: inline-block;
+            width: 100%;
             img {
-                border-radius: 10px;
+                border-radius: 12px;
+                width: 100%;
             }
             .play-icon {
                 position: absolute;
@@ -1101,6 +1099,43 @@
                 border-bottom-right-radius: 10px;
             }
         }
+    }
+    .slick-slide {
+        padding: 0 10px;
+    }
+    .slick-arrow {
+        position: absolute;
+        bottom: -30px;
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        text-align: center;
+        background: $white;
+        color: #717171;
+        border-radius: 50%;
+        border: 1px solid #717171;
+        outline: none;
+        transition: all .3s ease;
+        left: 52%;
+        transform: translateX(-50%);
+        @media (max-width: 768px) {
+            left: 54%;
+        }
+        &:hover{
+            background: $theme-color;
+            color: $white;
+            border: 1px solid $theme-color;
+        }
+    }
+    .pull-left { 
+        left: 48%;
+        transform: translateX(-50%);
+        @media (max-width: 768px) {
+            left: 46%;
+        }   
+    }
+    .slick-list{
+        margin: 0 -10px;
     }
 }
 // service details page end 
