--- a/assets/sass/pages/_gallery/_gallery_dashboard.scss
+++ b/assets/sass/pages/_gallery/_gallery_dashboard.scss
@@ -1,29 +1,113 @@
 .dashboard-header {
-    padding: 20px 40px;
-    display: flex;
-    align-items: center;
-
-}
-
-.dashboard-logo {
-    width: 30%;
-
-    @media (max-width:1200px) {
-        width: 38%;
-    }
-}
-
-.dashboard-header-right {
-    width: 100%;
+    padding: 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+}
+
+.dasboard-menuber {
+    display: none;
+    cursor: pointer;
+
+    div {
+        width: 35px;
+        height: 5px;
+        background-color: black;
+        margin: 6px 0;
+
+        @media (max-width: 576px) {
+            width: 20px;
+            height: 3px;
+            margin: 4px 0;
+        }
+    }
+
+    @media (max-width: 991px) {
+        display: block;
+    }
+
+
+}
+
+.dashboard-sidenav-small {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: $theme-color;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    .dashborard-sidenav-closebtn {
+        position: absolute;
+        top: 0;
+        right: 0px;
+        font-size: 36px;
+        background-color: $primary-bg;
+        line-height: 36px;
+        color: $theme-font;
+        font-weight: 600;
+        padding: 0px 8px;
+        transition: all .3s ease-in-out;
+        border: 1px solid rgba($color: $theme-color, $alpha: 0.2);
+        display: inline-block;
+    }
+    
+}
+
+@media screen and (max-height: 450px) {
+    .dashboard-sidenav-small {
+        padding-top: 15px;
+    }
+}
+
+.dashboard-logo {
+    @media (max-width: 991px) {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        column-gap: 20px;
+    }
+    @media (max-width:576px) {
+        max-width: 120px;
+        margin-left: 20px;
+        column-gap: 10px;
+    }
+
+}
+
+.dashboard-header-right {
+    width: calc(100% - 260px);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    @media (max-width:991px) {
+        justify-content: end;
+    }
+    @media (max-width:576px) {
+        width: calc(100% - 120px);
+    }
 }
 
 .dashboard-header-profile {
+
+    .fa-plus,
     .fa-home {
         font-size: 30px;
         margin-right: 20px;
+
+        @media (max-width:991px) {
+            font-size: 20px;
+        }
+
+        @media (max-width:400px) {
+            margin-right: 10px;
+            font-size: 16px;
+        }
     }
 }
 
@@ -33,7 +117,8 @@
     border-radius: 50%;
     object-fit: cover;
 }
-.dashboard-table-video{
+
+.dashboard-table-video {
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -41,7 +126,6 @@
 }
 
 .dashboard-main-content {
-    // position: relative;
     display: flex;
     flex-wrap: wrap;
     background-color: rgba($color: $primary-bg, $alpha: 0.5);
@@ -49,7 +133,7 @@
 
 .dashboard-sidenav {
     background-color: $theme-color;
-    width: 310px;
+    width: 280px;
 
     // height: 100vh;
     // position: absolute;
@@ -58,9 +142,10 @@
     // @media (max-width:1300px) {
     //     width: 280px;
     // }
-    @media (max-width: 768px) {
+    @media (max-width: 991px) {
         display: none;
     }
+
     // &::before {
     //     content: "";
     //     position: absolute;
@@ -76,9 +161,9 @@
     padding: 20px 30px;
 
     li {
-        &:first-child {
-            padding-top: 0px;
-        }
+        // &:first-child {
+        //     padding-top: 0px;
+        // }
 
         padding-top: 20px;
 
@@ -107,10 +192,12 @@
 
 .dashboard-main-content-right {
     padding: 30px;
-    width: calc(100% - 310px);
+    width: calc(100% - 280px);
     min-height: calc(100vh - 88px);
-    @media (max-width: 768px) {
+
+    @media (max-width: 991px) {
         width: 100%;
+        padding: 20px;
     }
 }
 
