--- a/assets/sass/pages/_gallery/_home.scss
+++ b/assets/sass/pages/_gallery/_home.scss
@@ -151,6 +151,9 @@
     display: grid;
     grid-gap: 10px;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        @media (min-width: 1400px) {
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        }
     @media (max-width:576px) {
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     }
