--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -69,6 +69,8 @@
 @import "pages/_gallery/album_photo";
 @import "pages/_gallery/gallery_dashboard";
 @import "pages/_gallery/dashboard_personal_profile";
+@import "pages/_gallery/dashboard_all_photo";
+@import "pages/_gallery/dashboard_all_video";
 
 
 
