--- a/assets/sass/pages/community/_settings.scss
+++ b/assets/sass/pages/community/_settings.scss
@@ -440,7 +440,36 @@
         top: 0;
     }
 }
+//message page end
 
+//Live chat start
+.live-chat-title {
+    .single-info {
+        margin-bottom: 0;
+    }
+}
+.chat-call {
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    .chat-call-btn {
+        height: 40px;
+        width: 40px;
+        border-radius: 5px;
+        border: none;
+        outline: none;
+        color: $theme-color;
+        transition: all .3s ease;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        &:hover{
+            color: $white;
+            background: $theme-color;
+        }
+    }
+}
+//Live chat end
 
 //Group Page edit CSS 
 
@@ -810,3 +839,111 @@
     }
 }
 // login page end 
+
+//vido page start 
+.single-upload-video {
+    background: $white;
+    padding: 10px;
+    margin: 15px 0 30px 0;
+    border-radius: 5px;
+    .video-img {
+        position: relative;
+        margin-bottom: 20px;
+        img {
+            border-radius: 5px;
+            width: 100%;
+        }
+        &::after{
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            border-radius: 5px;
+            left: 0;
+            top: 0;
+            visibility: hidden;
+            opacity: 0;
+            transition: all .3s ease;
+        }
+        .vido-play-icon {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: $white;
+            font-size: 24px;
+            z-index: 1;
+            transition: all .3s ease;
+        }
+        &:hover{
+            &::after{
+                visibility: visible;
+                opacity: 1;
+            }
+            .vido-play-icon {
+                color: $theme-color;
+            }
+        }
+    }
+    .post-react-widget {
+        display: flex;
+        column-gap: 20px;
+        align-items: center;
+        justify-content: unset;
+        @media (max-width:1499px) and (min-width:1399px) {
+            column-gap: 10px;
+        }
+        .post-react {
+            a {
+               display: flex;
+               align-items: center;
+               .react-icon {
+                width: 15px;
+               }
+               .react-count{
+                padding-left: 5px;
+                margin-left: 5px;
+                border-left: 1px solid #eee;
+                font-size: 12px;
+                @media (max-width:1499px) and (min-width:1399px) {
+                    padding-left: 0;
+                    margin-left: 2px;
+                    border-left: none;
+                }
+               }
+           }
+        }
+    }
+    .vido-coment {
+        position: relative;
+        margin-top: 20px;
+        input{
+            width: 100%;
+            height: 50px;
+            padding: 0 15px;
+            border: none;
+            outline: none;
+            background: #F4F7FC;
+            color: #6B7C8F;
+            border-radius: 5px;
+            font-size: 14px;
+            &:placeholder{
+                color: #6B7C8F;
+                font-size: 14px;
+            }
+        }
+        .vido-coment-send {
+            position: absolute;
+            top: 0;
+            right: 0;
+            height: 50px;
+            color: $theme-color;
+            padding: 0 15px;
+            border: none;
+            outline: none;
+            background: transparent;
+        }
+    }
+}
+//vido page end 
