--- a/assets/sass/pages/community/_settings.scss
+++ b/assets/sass/pages/community/_settings.scss
@@ -894,24 +894,27 @@
     border-radius: 5px;
     .video-img {
         position: relative;
-        margin-bottom: 20px;
-        img {
-            border-radius: 5px;
-            width: 100%;
-        }
-        &::after{
-            content: "";
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            border-radius: 5px;
-            left: 0;
-            top: 0;
-            visibility: hidden;
-            opacity: 0;
-            transition: all .3s ease;
-        }
+        cursor: pointer;
+        // margin-bottom: 20px;
+            display: block;
+            position: relative;
+            img {
+                border-radius: 5px;
+                width: 100%;
+            }
+            &::after{
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                background: rgba(0, 0, 0, 0.5);
+                border-radius: 5px;
+                left: 0;
+                top: 0;
+                visibility: hidden;
+                opacity: 0;
+                transition: all .3s ease;
+            }
         .vido-play-icon {
             position: absolute;
             top: 50%;
@@ -926,7 +929,7 @@
             &::after{
                 visibility: visible;
                 opacity: 1;
-            }
+            }            
             .vido-play-icon {
                 color: $theme-color;
             }
@@ -992,6 +995,43 @@
             border: none;
             outline: none;
             background: transparent;
+        }
+    }
+}
+.video-modal-show {
+    .vido-modal-close-btn{
+        position: absolute;
+        right: 0px;
+        top: -25px;
+        color: $white;
+        height: 25px;
+        width: 25px;
+        background: transparent;
+        border: none;
+        outline: none;
+    }
+    .playing-video {
+        width: 100%;
+        height: auto;
+        border-radius: 5px;
+    }
+    .video-coment-list {
+        height: 140px;
+        overflow-y: auto;
+    }
+    .uploaded-video-status{
+        p{
+            font-size: 14px;
+            color: #091727;
+            line-height: 24px;
+            margin-bottom: 20px;
+        }
+    }
+    .more-comment {
+        text-align: center;
+        a {
+            font-size: 14px;
+            color: #ff5b2e;
         }
     }
 }
