--- a/assets/sass/pages/services/_serviceHome.scss
+++ b/assets/sass/pages/services/_serviceHome.scss
@@ -1074,6 +1074,7 @@
     }
 }
 .video-active {
+    margin-bottom: 50px;
     .single-video {
         margin-bottom: 20px;
         .video-tumbnil {
@@ -1136,6 +1137,28 @@
     }
     .slick-list{
         margin: 0 -10px;
+    }
+}
+.service-video-modal {
+    .service-video-modal-close {
+        position: absolute;
+        top: 0;
+        right: -25px;
+        height: 25px;
+        width: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 16px;
+        color: $white;
+        border: none;
+        outline: none;
+        background: transparent;
+    }
+    .service-playing-video {
+        width: 100%;
+        height: auto;
     }
 }
 // service details page end 
