provider video tab done

--- a/assets/sass/pages/services/_serviceHome.scss
+++ b/assets/sass/pages/services/_serviceHome.scss
@@ -1081,7 +1081,8 @@
             position: relative;
             display: inline-block;
             width: 100%;
-            img {
+            line-height: 0;
+            .provider-video-poster {
                 border-radius: 12px;
                 width: 100%;
             }
@@ -1093,11 +1094,12 @@
                 text-align: center;
                 background: $theme-color;
                 color: $white;
-                font-size: 20px;
-                bottom: 0;
-                right: 0;
-                border-top-left-radius: 10px;
-                border-bottom-right-radius: 10px;
+                font-size: 18px;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+                border-radius: 50%;
+                z-index: 1;
             }
         }
     }
@@ -1140,6 +1142,11 @@
     }
 }
 .service-video-modal {
+    .modal-body {
+        padding: 0;
+        line-height: 0;
+        border-radius: 5px;
+    }
     .service-video-modal-close {
         position: absolute;
         top: 0;
@@ -1159,6 +1166,9 @@
     .service-playing-video {
         width: 100%;
         height: auto;
+        border-radius: 5px;
+        border: none;
+        outline: none;
     }
 }
 // service details page end 
