--- a/assets/sass/pages/services/_serviceHome.scss
+++ b/assets/sass/pages/services/_serviceHome.scss
@@ -1077,7 +1077,7 @@
     margin-bottom: 50px;
     .single-video {
         margin-bottom: 20px;
-        .video-tumbnil {
+        .video-thumbnil {
             position: relative;
             display: inline-block;
             width: 100%;
@@ -1085,6 +1085,8 @@
             .provider-video-poster {
                 border-radius: 12px;
                 width: 100%;
+                height: 250px;
+                object-fit: cover;
             }
             .play-icon {
                 position: absolute;
