word wrap word break

--- a/assets/sass/pages/community/_communityHome.scss
+++ b/assets/sass/pages/community/_communityHome.scss
@@ -871,6 +871,7 @@
                 font-size: 14px;
                 font-weight: 400;
                 margin-bottom: 5px;
+                word-wrap: break-word;
                 @media (max-width: 576px) {
                     font-size: 12px;
                 }
