--- a/assets/sass/pages/community/_myProfile.scss
+++ b/assets/sass/pages/community/_myProfile.scss
@@ -151,7 +151,7 @@
         flex-direction: column;
         padding: 25px;
     }
-    .profile-social {
+    .community-profile-social {
         display: flex;
         align-items: center;
         column-gap: 10px;
