--- a/assets/sass/pages/services/_serviceHome.scss
+++ b/assets/sass/pages/services/_serviceHome.scss
@@ -1190,3 +1190,104 @@
     }
 }
 // service details page end 
+
+//booking area start 
+.booking-area {
+    background: #f4ede6;
+    .booking-details-title {
+        font-size: 26px;
+        color: $theme-color;
+        margin-bottom: 30px;
+    }
+}
+.service-booking-wrap {
+    img{
+        width: 100%;
+        object-fit: cover;
+        border-radius: 5px;
+        margin-bottom: 30px;
+    }
+    .boking-service-title{
+        font-size: 22px;
+        color: $theme-color;
+        font-weight: 600;
+    }
+    .service-details-top {
+        .service-info {
+            font-size: 15px;
+            line-height: 28px;
+            color: #8d8c8c;
+        }
+    }
+}
+.service-booking-form {
+    margin-bottom: 90px;
+    label{
+        font-size: 19px;
+        color: #6B7C8F;
+        display: block;
+        margin-bottom: 10px;
+        font-weight: 400;
+    }
+    input, .nice-select {
+        width: 100%;
+        height: 50px;
+        background:#F4F7FC;
+        font-size: 17px;
+        color: #6B7C8F;
+        padding: 10px 20px;
+        border: none;
+        outline: none;
+        border-radius: 5px;
+        margin-bottom: 20px;
+        font-weight: 400;
+        transition: all .3s ease;
+        line-height: 28px;
+        &:focus{
+            outline: 1px solid $theme-color;
+            &::placeholder{
+                color: transparent;
+            }
+        }
+        .list {
+            width: 100%;
+            .option {
+                margin: 0;
+            }
+        }
+    } 
+}
+
+.book-date {
+    .date-input {
+        width: 100%;
+        .start-date {
+            font-size: 17px;
+            margin-bottom: 10px;
+            color: $theme-font;
+            font-weight: 500;
+            display: block;
+        }
+        input{
+            width: 100%;
+            height: 50px;
+            background:#F4F7FC;
+            font-size: 17px;
+            color: #6B7C8F;
+            padding: 10px 20px;
+            border: 1px solid transparent;
+            outline: none;
+            border-radius: 5px;
+            margin-bottom: 20px;
+            font-weight: 400;
+            transition: all .3s ease;
+            line-height: 28px;
+            &:hover{
+                border: 1px solid $theme-color;
+            }
+        }
+    }
+}
+
+//booking area end 
+   
